Create Jumbo section Structure

--- a/index.html
+++ b/index.html
@@ -12,8 +12,23 @@
         <link rel="stylesheet" href="./css/style.css">
 
     </head>
-    
+
     <body>
-        
+        <main>
+
+            <section id="jumbo" class="green">
+                <div class="container h-100">
+
+                    <div class="row h-100 align-items-center">
+                        <div class="col-12">
+                            <div class="jumbo-content">
+                                <h1 class="text-center">TITOLO</h1>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+        </main>
     </body>
 </html>
