Create Portfolio Ceads section Structure

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <body>
         <main>
-
-            <section id="jumbo" class="green">
+            <!-- Jumbo -->
+            <section id="jumbo" class="green mb-4">
                 <div class="container h-100">
 
                     <div class="row h-100 align-items-center">
@@ -27,6 +27,39 @@
                         </div>
                     </div>
 
+                </div>
+            </section>
+
+            <section id="portfolio" class="mb-4">
+                <div class="container">
+
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="text-center">Portfolio</h1>
+                        </div>
+                    </div>
+
+                    <!-- Portfolio Cards -->
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-xl-4 g-2">
+                            <div class="portfolio-card"></div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-4 g-2">
+                            <div class="portfolio-card"></div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-4 g-2">
+                            <div class="portfolio-card"></div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-4 g-2">
+                            <div class="portfolio-card"></div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-4 g-2">
+                            <div class="portfolio-card"></div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-4 g-2">
+                            <div class="portfolio-card"></div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
