Create about section structure

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 </div>
             </section>
 
+                <!-- Portfolio Cards -->
             <section id="portfolio" class="mb-4">
                 <div class="container">
 
@@ -59,6 +60,24 @@
                         <div class="col-12 col-md-6 col-xl-4 g-2">
                             <div class="portfolio-card"></div>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- About section -->
+            <section id="about" class="mb-4 green">
+                <div class="container">
+
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="text-center mb-3">About</h1>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-12 col-md-6 mb-5 px-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis in rerum quisquam sit at perspiciatis, nobis repudiandae iusto eveniet quibusdam? Temporibus corporis accusamus ipsum, rem laborum sequi repellendus dolorem unde.</div>
+                            <div class="col-12 col-md-6 px-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere nam fugiat voluptatem fuga unde, voluptates, laborum, autem maiores doloribus nisi asperiores veritatis nemo distinctio sint consequuntur dignissimos quaerat voluptate ipsum!</div>
+                        </div>
+
                     </div>
                 </div>
             </section>
