--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                     <div class="row">
                         <div class="col-12">
-                            <h1 class="text-center mb-3">About</h1>
+                            <h1 class="text-center mb-3 pt-3">About</h1>
                         </div>
 
                         <div class="row">
