Create Footer Address Section Structure

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </section>
 
             <!-- About section -->
-            <section id="about" class="mb-4 green">
+            <section id="about" class="pb-4 green">
                 <div class="container">
 
                     <div class="row">
@@ -82,5 +82,25 @@
                 </div>
             </section>
         </main>
+
+        <footer>
+            <!-- Address Section -->
+            <section id="address" class="py-5">
+                <div class="container">
+                    <div class="row text-center">
+                        <div class="col-12 col-md-4">
+                            ITEM
+                        </div>
+                        <div class="col-12 col-md-4 py-sm-3 py-md-0 ">
+                            ITEM
+                        </div>
+                        <div class="col-12 col-md-4">
+                            ITEM
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+        </footer>
     </body>
 </html>
