--- a/index.html
+++ b/index.html
@@ -91,11 +91,22 @@
                         <div class="col-12 col-md-4">
                             ITEM
                         </div>
-                        <div class="col-12 col-md-4 py-sm-3 py-md-0 ">
+                        <div class="col-12 col-md-4 py-3 py-md-0">
                             ITEM
                         </div>
                         <div class="col-12 col-md-4">
                             ITEM
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="copyright" class="py-3">
+                <div class="container">
+
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <span>Copyright &copy; Your Website 2019</span>
                         </div>
                     </div>
                 </div>
