--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <main>
             <!-- Jumbo -->
-            <section id="jumbo" class="green mb-4">
+            <section id="jumbo" class="green mb-4 py-2">
                 <div class="container h-100">
 
                     <div class="row h-100 align-items-center">
@@ -101,6 +101,7 @@
                 </div>
             </section>
 
+            <!-- Copyright Section -->
             <section id="copyright" class="py-3">
                 <div class="container">
 
