--- a/index.html
+++ b/index.html
@@ -75,9 +75,14 @@
 
                         <div class="row">
                             <div class="col-12 col-md-6 mb-5 px-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis in rerum quisquam sit at perspiciatis, nobis repudiandae iusto eveniet quibusdam? Temporibus corporis accusamus ipsum, rem laborum sequi repellendus dolorem unde.</div>
-                            <div class="col-12 col-md-6 px-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere nam fugiat voluptatem fuga unde, voluptates, laborum, autem maiores doloribus nisi asperiores veritatis nemo distinctio sint consequuntur dignissimos quaerat voluptate ipsum!</div>
+                            <div class="col-12 col-md-6 mb-3 px-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere nam fugiat voluptatem fuga unde, voluptates, laborum, autem maiores doloribus nisi asperiores veritatis nemo distinctio sint consequuntur dignissimos quaerat voluptate ipsum!</div>
                         </div>
 
+                        <div class="row">
+                            <div class="col-12 text-center">
+                                <a href="#" class="btn btn-light">Download</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
