--- a/index.html
+++ b/index.html
@@ -14,6 +14,35 @@
     </head>
 
     <body>
+
+        <header>
+            <nav class="navbar navbar-expand-lg text-uppercase">
+                <div class="container nav-color">
+
+                
+                    <a class="navbar-brand fw-bold" href="#">start bootstrap</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNavs" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                      <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">about</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">contact</a>
+                        </li>
+                      </ul>
+                    </div>
+
+                </div>
+              </nav>
+        </header>
+
         <main>
             <!-- Jumbo -->
             <section id="jumbo" class="green mb-4 py-2">
@@ -74,8 +103,8 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-12 col-md-6 mb-5 px-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis in rerum quisquam sit at perspiciatis, nobis repudiandae iusto eveniet quibusdam? Temporibus corporis accusamus ipsum, rem laborum sequi repellendus dolorem unde.</div>
-                            <div class="col-12 col-md-6 mb-3 px-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere nam fugiat voluptatem fuga unde, voluptates, laborum, autem maiores doloribus nisi asperiores veritatis nemo distinctio sint consequuntur dignissimos quaerat voluptate ipsum!</div>
+                            <div class="col-12 col-md-6 mb-5 ps-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis in rerum quisquam sit at perspiciatis, nobis repudiandae iusto eveniet quibusdam? Temporibus corporis accusamus ipsum, rem laborum sequi repellendus dolorem unde.</div>
+                            <div class="col-12 col-md-6 mb-3 pe-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere nam fugiat voluptatem fuga unde, voluptates, laborum, autem maiores doloribus nisi asperiores veritatis nemo distinctio sint consequuntur dignissimos quaerat voluptate ipsum!</div>
                         </div>
 
                         <div class="row">
@@ -119,5 +148,9 @@
             </section>
 
         </footer>
+
+
+        <!-- JS Script -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
 </html>
