--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <!-- Boostrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+        <!-- Font Awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+
         <!-- Style -->
         <link rel="stylesheet" href="./css/style.css">
 
@@ -16,11 +19,11 @@
     <body>
 
         <header>
-            <nav class="navbar navbar-expand-lg text-uppercase">
+            <nav class="navbar navbar-expand-lg navbar-dark text-uppercase">
                 <div class="container nav-color">
 
                 
-                    <a class="navbar-brand fw-bold" href="#">start bootstrap</a>
+                    <a class="navbar-brand fw-bold fs-2" href="#">start bootstrap</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNavs" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -28,13 +31,13 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                       <ul class="navbar-nav">
                         <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="#">portfolio</a>
+                          <a class="nav-link text-white" aria-current="page" href="#">portfolio</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">about</a>
+                          <a class="nav-link text-white" href="#">about</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">contact</a>
+                          <a class="nav-link text-white" href="#">contact</a>
                         </li>
                       </ul>
                     </div>
@@ -48,10 +51,10 @@
             <section id="jumbo" class="green mb-4 py-2">
                 <div class="container h-100">
 
-                    <div class="row h-100 align-items-center">
+                    <div class="row">
                         <div class="col-12">
-                            <div class="jumbo-content">
-                                <h1 class="text-center">TITOLO</h1>
+                            <div class="jumbo-content d-flex justify-content-center flex-column">
+                                
                             </div>
                         </div>
                     </div>
@@ -62,7 +65,6 @@
                 <!-- Portfolio Cards -->
             <section id="portfolio" class="mb-4">
                 <div class="container">
-
                     <div class="row">
                         <div class="col-12">
                             <h1 class="text-center">Portfolio</h1>
