Create Jumbo section content

--- a/index.html
+++ b/index.html
@@ -54,7 +54,38 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="jumbo-content d-flex justify-content-center flex-column">
-                                
+                                <img src="./img/avatar.svg" alt="Avatar Img">
+                                <h1 class="text-center text-uppercase">start bootstrap</h1>
+
+                                <!-- Start Separator -->
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="row justify-content-center star">
+
+                                            <div class="col-3 p-0 d-flex justify-content-end align-items-center">
+                                                <div class="up-score"></div>
+                                            </div>
+
+                                            <div class="col-1 p-0 d-flex justify-content-center align-items-center">
+                                                <i class="fa-solid fa-star fs-1"></i>
+                                            </div>
+
+                                            <div class="col-3 p-0 d-flex justify-content-start align-items-center">
+                                                <div class="up-score"></div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Start Separator -->
+                                <div class="row">
+                                    <div class="col-12">
+                                        <p class="fs-5 	d-lg-none d-md-none text-uppercase text-center font-weight-bold py-3">Graphic Artist - Web Designer - Illustrator </p>
+                                        <p class="fs-3 d-none d-md-block d-lg-none d text-uppercase text-center font-weight-bold py-3">Graphic Artist - Web Designer - Illustrator </p>
+                                        <p class="fs-3 d-none d-lg-block d text-uppercase text-center font-weight-bold py-3">Graphic Artist - Web Designer - Illustrator </p>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
