Add About section content

--- a/index.html
+++ b/index.html
@@ -170,16 +170,38 @@
                             <h1 class="text-center mb-3 pt-3">About</h1>
                         </div>
 
-                        
+                        <!-- Start Separator -->
+                        <div class="row mb-4">
+                            <div class="col-12">
+                                <div class="row justify-content-center star">
 
-                        <div class="row">
-                            <div class="col-12 col-md-6 mb-5 ps-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis in rerum quisquam sit at perspiciatis, nobis repudiandae iusto eveniet quibusdam? Temporibus corporis accusamus ipsum, rem laborum sequi repellendus dolorem unde.</div>
-                            <div class="col-12 col-md-6 mb-3 pe-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere nam fugiat voluptatem fuga unde, voluptates, laborum, autem maiores doloribus nisi asperiores veritatis nemo distinctio sint consequuntur dignissimos quaerat voluptate ipsum!</div>
+                                    <div class=" col-3 p-0 d-flex justify-content-end align-items-center">
+                                        <div class="up-score up-score-white"></div>
+                                    </div>
+
+                                    <div class="col-1 p-0 d-flex justify-content-center align-items-center">
+                                        <i class="fa-solid fa-star fs-1"></i>
+                                    </div>
+
+                                    <div class="col-3 p-0 d-flex justify-content-start align-items-center">
+                                        <div class="up-score up-score-white"></div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Start Separator -->
+
+                        <div class="row m-auto">
+                            <div class="col-12 col-md-6 mb-5 ps-5 pe-5 pe-lg-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis in rerum quisquam sit at perspiciatis, nobis repudiandae iusto eveniet quibusdam? Temporibus corporis accusamus ipsum, rem laborum sequi repellendus dolorem unde.</div>
+                            <div class="col-12 col-md-6 mb-5 ps-5 pe-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere nam fugiat voluptatem fuga unde, voluptates, laborum, autem maiores doloribus nisi asperiores veritatis nemo distinctio sint consequuntur dignissimos quaerat voluptate ipsum!</div>
                         </div>
 
                         <div class="row">
                             <div class="col-12 text-center">
-                                <a href="#" class="btn btn-light">Download</a>
+                                <a href="#" class="btn btn-outline-light fs-5"> 
+                                    <i class="fa-solid fa-download"></i> Download
+                                </a>
                             </div>
                         </div>
                     </div>
