--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <main>
             <!-- Jumbo -->
-            <section id="jumbo" class="green mb-5 py-2">
+            <section id="jumbo" class="green mb-5 py-5">
                 <div class="container h-100">
 
                     <div class="row">
@@ -95,11 +95,11 @@
             </section>
 
                 <!-- Portfolio Cards Section -->
-            <section id="portfolio" class="mb-5">
+            <section id="portfolio" class="mb-5 py-5">
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h1 class="text-center text-uppercase py-2">Portfolio</h1>
+                            <h2 class="text-center text-uppercase py-2">Portfolio</h2>
 
                             <!-- Start Separator -->
                             <div class="row py-3">
@@ -167,7 +167,7 @@
 
                     <div class="row">
                         <div class="col-12">
-                            <h1 class="text-center mb-3 text-uppercase pt-3">About</h1>
+                            <h2 class="text-center mb-3 text-uppercase pt-3">About</h2>
                         </div>
 
                         <!-- Start Separator -->
@@ -213,7 +213,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h1 class="text-center text-uppercase py-2">Contact me</h1>
+                            <h2 class="text-center text-uppercase py-2">Contact me</h2>
 
                             <!-- Start Separator -->
                             <div class="row py-3 mb-5">
