--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                         <textarea name="Message" placeholder="Message" id="" cols="30" rows="10" class="w-100"></textarea>
                                     </div>
                                     <div class="col-12 d-flex justify-content-start">
-                                        <button class="btn btn-success">Send</button>
+                                        <button class="btn btn-success green-btn">Send</button>
                                     </div>
                                 </div>
                             </form>
@@ -271,13 +271,25 @@
                 <div class="container">
                     <div class="row text-center">
                         <div class="col-12 col-md-4">
-                            ITEM
+                            <h3 class="fs-4 text-center text-uppercase">Location</h3>
+                            <span class="fs-5">2215 John Daniel Drive Clark, MO 54243</span>
                         </div>
-                        <div class="col-12 col-md-4 py-3 py-md-0">
-                            ITEM
+                        <div class="col-12 col-md-4 py-3 py-5 py-md-0">
+                            <h3 class="fs-4 text-center text-uppercase mb-2">Around the web</h3>
+                            <div class="social-icon">
+                                <i class="fa-brands fa-facebook-f"></i>
+                                <i class="fa-brands fa-google-plus-g"></i>
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </div>
                         </div>
                         <div class="col-12 col-md-4">
-                            ITEM
+                            <h3 class="fs-4 text-center text-uppercase">About freelancer</h3>
+                            <span class="fs-5">
+                                Freelance is a free use, open source Bootstrap theme created by 
+                                <span class="green-txt">Start Bootstrap</span>.
+                            </span>
+
                         </div>
                     </div>
                 </div>
